# vertex-pipelines-end-to-end-samples

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .yamllint  CONTRIBUTING.md  Makefile  NOTES.md  Pipfile  README.md  USAGE.md  env.sh  env.sh.example  pyproject.toml  transfer_dataset.sh  tutorial.ipynb
components/bigquery-components/: README.md  pyproject.toml
components/bigquery-components/src/bigquery_components/: __init__.py  bq_query_to_table.py  extract_bq_to_dataset.py
components/bigquery-components/tests/: test_extract_bq_to_dataset.py
components/vertex-components/: .python-version  Pipfile  README.md  pyproject.toml
components/vertex-components/src/vertex_components/: __init__.py  custom_train_job.py  import_model_evaluation.py  lookup_model.py  model_batch_predict.py  update_best_model.py  upload_model.py
components/vertex-components/tests/: test_custom_training_job.py  test_import_model_evaluation.py  test_lookup_model.py  test_model_batch_predict.py  test_update_best_model.py  test_upload_model.py
model/: .gcloudignore  Dockerfile  cloudbuild.yaml  pyproject.toml
model/serving/: Dockerfile  main.py
model/training/: Dockerfile  __main__.py  train.py  utils.py
my-use-case/: Dockerfile  README.md  build_image.sh  cloudbuild.yaml  pyproject.toml
my-use-case/src/components/: __init__.py
my-use-case/src/logic/: train.py
pipelines/: Pipfile  README.md  __init__.py  components.py  pyproject.toml  tfma_metrics_visualisations.ipynb
pipelines/assets/: train_xgb_model.py
pipelines/demo/training/: pipeline.py
pipelines/demo/training/payloads/: dev.json
pipelines/kfp_components/: README.md  dependencies.py
pipelines/kfp_components/aiplatform/: __init__.py  export_model.py  get_current_time.py  lookup_model.py  upload_model.py
pipelines/kfp_components/bigquery/: __init__.py  extract_dataset.py  query_to_table.py  upload_prediction.py
pipelines/kfp_components/evaluation/: __init__.py  compare_models.py  evaluation_metrics_tfma.md  evaluation_metrics_tfma.py  tfma_custom_metrics.md
pipelines/kfp_components/helpers/: __init__.py  copy_artifact.py  get_model_uri.py  quote_csv_header.py
pipelines/kfp_components/tensorflow/: __init__.py  predict.py  train.py
pipelines/kfp_components/tfdv/: __init__.py  generate_statistics.md  generate_statistics.py  show_anomalies.py  validate_schema.py  validate_skew.py  visualise_statistics.py
pipelines/kfp_components/xgboost/: __init__.py  predict.py  train.py
pipelines/pipelines/: __init__.py  components.py
pipelines/pipelines/debug/assets/: task.py
pipelines/pipelines/debug/training/: pipeline.py
pipelines/pipelines/kfp_components/: __init__.py
pipelines/pipelines/tensorflow/: README.md
pipelines/pipelines/tensorflow/prediction/: pipeline.py
pipelines/pipelines/tensorflow/training/: pipeline.py
pipelines/pipelines/xgboost/: README.md
pipelines/pipelines/xgboost/prediction/: pipeline.py
pipelines/pipelines/xgboost/training/: pipeline.py
pipelines/src/pipelines/: __init__.py  __main__.py  config.py  prediction.py  training.py  utils.py
pipelines/src/pipelines/configs/: __init__.py  tensorflow.py  xgboost.py
pipelines/src/pipelines/pipelines/: predict.py  train.py
pipelines/src/pipelines/prediction/: pipeline.py
pipelines/src/pipelines/queries/: preprocessing.sql
pipelines/src/pipelines/tensorflow/: README.md
pipelines/src/pipelines/training/: pipeline.py
pipelines/src/pipelines/trigger/: README.md  __main__.py  main.py
pipelines/src/pipelines/utils/: query.py  trigger_pipeline.py  upload_pipeline.py
pipelines/tensorflow/: README.md
pipelines/tensorflow/prediction/: pipeline.py
pipelines/tensorflow/prediction/payloads/: dev.json  prod.json  test.json
pipelines/tensorflow/prediction/queries/: ingest.sql
pipelines/tensorflow/training/: pipeline.py
pipelines/tensorflow/training/payloads/: prod.json  test.json
pipelines/tensorflow/training/queries/: engineer_features.sql  ingest.sql
pipelines/tests/: conftest.py
pipelines/tests/e2e/: __init__.py  test_e2e.py
pipelines/tests/prediction/: test_e2e.py
pipelines/tests/training/: test_e2e.py
pipelines/tests/trigger/: test_main.py
pipelines/tests/utils/: test_trigger_pipeline.py  test_upload_pipeline.py
pipelines/trigger/: README.md  main.py  requirements.txt
pipelines/xgboost/prediction/: pipeline.py
pipelines/xgboost/training/: pipeline.py
shared-pipeline-components/: README.md  pyproject.toml
shared-pipeline-components/src/: __main__.py
shared-pipeline-components/src/aiplatform/: __init__.py  export_model.py  get_current_time.py  lookup_model.py  upload_model.py
shared-pipeline-components/src/bigquery/: __init__.py  extract_dataset.py  query_to_table.py  upload_prediction.py
shared-pipeline-components/src/evaluation/: compare_models.py  evaluation_metrics_tfma.py  tfma_custom_metrics.md
shared-pipeline-components/src/helpers/: __init__.py  copy_artifact.py  get_model_uri.py  quote_csv_header.py
shared-pipeline-components/src/tensorflow/: __init__.py  predict.py  train.py
shared-pipeline-components/src/tfdv/: generate_statistics.py  show_anomalies.py  validate_schema.py  validate_skew.py  visualise_statistics.py
shared-pipeline-components/src/xgboost/: __init__.py  predict.py  train.py
shared-pipeline-components/tests/: conftest.py
shared-pipeline-components/tests/aiplatform/: test_get_current_time.py  test_lookup_model.py
shared-pipeline-components/tests/evaluation/: test_compare_models.py  test_custom_eval_metrics.py  test_eval_metrics.py
shared-pipeline-components/tests/helpers/: test_copy_artifact.py  test_model_to_uri.py  test_quote_csv_header.py
shared-pipeline-components/tests/tensorflow/: test_tensorflow_predict.py  test_tensorflow_train.py
shared-pipeline-components/tests/tfdv/: test_generate_statistics.py  test_show_anomalies.py  test_validate_schema.py  test_validate_skew.py  test_visualise_statistics.py
shared-pipeline-components/tests/xgboost/: test_predict.py  test_train.py
training/: Dockerfile  main.py  pyproject.toml
(+319 files in other folders)
