[tool.poetry]
name = "turbo-template"
version = "0.1.0"
description = "Turbo Template developed at Datatonic"
authors = ["roberta nwokonko <roberta.nwokonko@datatonic.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = ">=3.0.1,<4.0.0"
google-cloud-aiplatform = "1.24.1"
google-cloud-pipeline-components = "1.0.42"
kfp = "1.8.21"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<8.0.0"
pre-commit = ">=2.14.1,<3.0.0"

[tool.pytest.ini_options]
pythonpath = [
  ".",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
