[tool.poetry]
name = "pipelines"
version = "0.1.0"
authors = ["Example User <user@example.com>"]
description = "Vertex AI Pipelines end-to-end sample"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
]
packages = [
    { include = "pipelines", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
Jinja2 = ">=3.0.1,<4.0.0"
google-cloud-aiplatform = "1.24.1"
google-cloud-pipeline-components = "1.0.42"
bigquery-components = { path = "../components/bigquery-components", develop = true }
vertex-components = { path = "../components/vertex-components", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<8.0.0"
pre-commit = ">=2.14.1,<3.0.0"
coverage = "==7.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
per-file-ignores = [
    "E203",
    "F841"
]
ignore = [
    "E203",
    "F841",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = "tests"
junit_family = "xunit2"
