[tool.poetry]
name = "shared_pipeline_components"
version = "0.0.1"
description = ""
authors = ["Felix Schaumann <felix.schaumann@datatonic.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
keywords = []
classifiers = []
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7"
kfp = "1.8.9"

[tool.poetry.dev-dependencies]
#apache-beam="2.35.0"
#google-cloud-aiplatform="1.10.0"
#google-cloud-bigquery="2.34.3; python_version < '3.11' and python_version >= '3.6'"
#keras-preprocessing="1.1.2"
#keras="2.7.0"
#numpy="1.19.5"
#pandas="1.3.2"
#pytest="6.2.5"
#scikit-learn="0.24.1"
#tensorflow-data-validation="1.6.0"
#tensorflow-model-analysis="0.37.0"
#tensorflow="2.7.1"
#xgboost="1.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
