[tool.poetry]
name = "vertex-components"
version = "0.1.0"
authors = [
    {name = "Example User", email = "user@example.com"},
]
description = "Vertex components for training and prediction using the Chicago Taxi Dataset"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
google-cloud-aiplatform = "1.24.1"
google-cloud-pipeline-components = "1.0.42"
kfp = "==1.8.21"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<8.0.0"
pre-commit = ">=2.14.1,<3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
per-file-ignores = [
    "E203",
    "F841"
]
ignore = [
    "E203",
    "F841",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = "tests"
junit_family = "xunit2"

